Fix z-index

--- a/styles/GenPlan.module.scss
+++ b/styles/GenPlan.module.scss
@@ -130,6 +130,7 @@
 
 .gen_plan {
   position: relative;
+  z-index: 1;
 
   .title {
     position: relative;
